# agentevals

./: README.md
.github/workflows/: integration_tests.yml
js/: .eslintcache  .gitignore  README.md  langchain.config.js  package.json  vitest.config.ts
js/dist-cjs/: utils.js
js/dist-cjs/trajectory/: llm.js  strict.js  subset.js  superset.js  unordered.js  utils.js
js/src/: index.ts  types.ts  utils.ts
js/src/graph_trajectory/: llm.ts  strict.ts  utils.ts
js/src/graph_trajectory/tests/: graph_trajectory_llm.test.ts  (+2 more)
js/src/trajectory/: llm.ts  match.ts  strict.ts  subset.ts  superset.ts  toolPermission.ts  unordered.ts  utils.ts
python/: README.md  pyproject.toml
python/agentevals/: types.py
python/agentevals/graph_trajectory/: __init__.py  llm.py  match.py  subset.py  superset.py  unordered.py  utils.py
python/agentevals/trajectory/: __init__.py  llm.py  match.py  strict.py  subset.py  superset.py  tool_permission.py  unordered.py  utils.py
python/agentevals/wrappers/: reflection.py
python/tests/: test_trajectory.py  test_trajectory_async.py  test_trajectory_diagnostics.py  test_trajectory_llm.py  test_trajectory_llm_async.py  test_trajectory_tool_permission.py  test_trajectory_tool_permission_async.py
python/tests/graph_trajectory/: test_graph_trajectory_llm.py  test_graph_trajectory_llm_async.py  test_graph_trajectory_match.py  test_graph_trajectory_strict.py  test_graph_trajectory_strict_async.py  test_graph_trajectory_utils.py
python/tests/langgraph/wrappers/: test_reflection.py
python/tests/wrappers/: test_reflection.py
(+3 files in other folders)
