[project]
name = "agentevals"
version = "0.0.9"
license = {text = "MIT"}
description = "Open-source evaluators for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openevals>=0.0.20"
]

[dependency-groups]
dev = [
    "langgraph>=0.5.4",
    "mypy>=1.15.0",
    "openai>=1.61.1",
    "openevals>=0.1.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.9.5",
]

[tool.setuptools.packages.find]
include = ["agentevals*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]

[tool.uv]
# Security vulnerability mitigations — constraint lower bounds for transitive deps.
constraint-dependencies = [
    "langchain-core>=1.2.22",          # CVE-2026-34070 (high), CVE-2026-26013 (low)
    "langgraph>=1.0.10",               # CVE-2026-28277 (medium)
    "langgraph-checkpoint>=4.0.0",     # CVE-2026-27794 (medium), CVE-2025-64439 (high)
    "orjson>=3.11.6",                  # CVE-2025-67221 (high)
    "requests>=2.33.0",               # CVE-2026-25645 (medium)
    "pygments>=2.20.0",               # CVE-2026-4539 (low)
]
